gutenprint (5.0.0-beta4-1) unstable; urgency=low

  * New upstream beta release.
  * Build-Depend upon libreadline5-dev.
  * Correct libgutenprintui2-dev dependencies.
  * Remove old manual pages.
  * Provide versioned ijsgutenprint manual page, and unversioned
    symlinks for the binary and manpage.
  * Install renamed foomatic files correctly.

 -- Roger Leigh <rleigh@debian.org>  Wed, 26 Apr 2005 21:11:02 +0100

gutenprint (5.0.0-beta3-1) unstable; urgency=low

  * New upstream beta release.
  * gimp-print:
    - Install the plug-in into the GIMP 2.0 plug-in directory rather
      than the 1.2 directory.
    - Don't install a duplicate copy of FAQ.html.
  * Remove libgutenprintui packages, since libgimp1.2 and gimp1.2
    are no longer available in Debian unstable.
  * Remove libgtk1.2 build dependency.

 -- Roger Leigh <rleigh@debian.org>  Sun, 06 Feb 2005 20:22:36 +0000

gutenprint (5.0.0-beta2-1) unstable; urgency=low

  * New upstream beta release.
  * Renamed package to gutenprint.  The following packages were
    renamed in consequence:
    - cupsys-driver-gimpprint renamed to cupsys-driver-gutenprint
    - foomatic-db-gimp-print renamed to foomatic-db-gutenprint
    - gimpprint-doc renamed to gutenprint-doc
    - gimpprint-locales renamed to gutenprint-locales
    - ijsgimpprint renamed to ijsgutenprint
    - libgimpprint renamed to libgutenprint
    - libgimpprint-dev renamed to libgutenprint-dev
    - libgimpprint-doc renamed to libgutenprint-doc
  * New packages:
    - libgimpprintui (GTK+ 1.2 UI library)
    - libgimpprintui-dev (GTK+ 1.2 UI library headers)
    - libgimpprintui2 (GTK+ 2.0 UI library)
    - libgimpprintui2-dev (GTK+ 2.0 UI library headers)
  * libgutenprint-dev: drop static libgutenprint.a

 -- Roger Leigh <rleigh@debian.org>  Sun, 12 Sep 2004 15:29:49 +0100

gimp-print (5.0.0-alpha3-1) unstable; urgency=low

  * New upstream alpha release.
  * Build a static libgimpprintui only.
  * Remove libgimpprintui packages.