@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 # rules to package gutenprint
-# $Id: rules,v 1.56 2005/04/27 11:17:14 rleigh Exp $
+# $Id: rules,v 1.57 2005/05/05 10:36:08 rleigh Exp $
 #
 # Uncomment this to turn on verbose mode. 
 #export DH_VERBOSE=1
@@ -133,7 +133,6 @@ binary-arch: build install
 	dh_makeshlibs -a -V -X usr/lib/gutenprint
 	dh_installdeb -a
 	dh_shlibdeps -a -X usr/lib/gutenprint -l$(CURDIR)/debian/libgutenprint$(LIBRARY_VERSION)/usr/lib:$(CURDIR)/debian/libgutenprintui2$(LIBRARY_VERSION)/usr/lib
-	dh_perl -a
 	dh_gencontrol -a
 	dh_md5sums -a
 	dh_builddeb -a
