@@ -7,8 +7,9 @@ gutenprint (5.0.0-beta4-1) unstable; urgency=low
   * Provide versioned ijsgutenprint manual page, and unversioned
     symlinks for the binary and manpage.
   * Install renamed foomatic files correctly.
+  * Sync control file with Debian changes.
 
- -- Roger Leigh <rleigh@debian.org>  Wed, 26 Apr 2005 21:11:02 +0100
+ -- Roger Leigh <rleigh@debian.org>  Mon, 02 May 2005 17:10:59 +0100
 
 gutenprint (5.0.0-beta3-1) unstable; urgency=low
 
